--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,23 @@
 <ion-tabs>
-
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="bielsa">
+      <ion-icon aria-hidden="true" name="train-outline"></ion-icon>
+      <ion-label>Bielsa</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="webcams">
+      <ion-icon aria-hidden="true" name="videocam-outline"></ion-icon>
+      <ion-label>Webcams</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="slides">
+      <ion-icon aria-hidden="true" name="people-outline"></ion-icon>
+      <ion-label>Contacto</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="whetterzentrale">
+      <ion-icon aria-hidden="true" name="snow-outline"></ion-icon>
+      <ion-label>WZ</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
